examples/fail/clone.niu
import "std/opes.niu"
struct Hoge {} {}

impl Clone for Hoge {
  fn clone(self: Self) -> Self {
    self
  }
}
